--- a/styles.scss
+++ b/styles.scss
@@ -10,21 +10,32 @@
     --white: hsl(0, 0%, 100%);
 }
 
+@font-face {
+    font-family: 'Roboto';
+    src: url(assets/fonts/Roboto-Regular.ttf);
+}
+
 .hidden {
     display: none;
 }
 
 body {
     font-family: 'Roboto';
-    font-size: 16px;
     background-color: var(--dark-slate-gray);
 }
 
 .container-md {
     background-color: var(--white);
+    height: 100vh;
+}
+
+h1 {
+    font-weight: 700;
+    font-size: 2.5rem;
 }
 
 #newsletter-info ul li {
+    list-style-type: none;
 }
 
 .attribution {
