--- a/styles.scss
+++ b/styles.scss
@@ -15,40 +15,100 @@
     src: url(assets/fonts/Roboto-Regular.ttf);
 }
 
-.hidden {
-    display: none;
-}
-
 body {
     font-family: 'Roboto';
-    background-color: var(--dark-slate-gray);
 }
 
 .container-md {
-    background-color: var(--white);
+    color: var(--dark-slate-gray);
     height: 100vh;
+}
+
+.row {
+    height: 100%;
 }
 
 h1 {
     font-weight: 700;
-    font-size: 2.5rem;
+    font-size: 2.8rem;
 }
 
 #newsletter-info ul li {
-    list-style-type: none;
+    list-style-image: url(assets/images/icon-list.svg);
+    margin: 18px auto;
+    padding-left: 12px;
+}
+
+#subscription-form label {
+    font-weight: 700;
+}
+
+.form-control {
+    cursor: pointer;
+}
+
+#submit-form-btn, #dismiss-msg-btn {
+    background: var(--dark-slate-gray);
+    color: var(--white);
+    font-weight: 700;
+    position: relative;
+    overflow: hidden;
+    border: none;
+}
+
+#submit-form-btn::before, #dismiss-msg-btn::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(85deg, #f73c7f, #fd9442);
+    z-index: 0;
+    opacity: 0;
+    transition: 0.15s ease-in-out;
+}
+
+#submit-form-btn:hover::before, #dismiss-msg-btn:hover::before {
+    opacity: 1;
+}
+
+#submit-form-btn span, #dismiss-msg-btn span {
+    position: relative;
+    z-index: 1;
+}
+
+#submit-form-btn:hover, #dismiss-msg-btn:hover {
+    box-shadow: 0 0.3rem 3rem -0.5rem var(--tomato);
+}
+
+#success-message col {
+    height: 100%;
+}
+
+.error {
+    color: var(--bs-danger);
+    background-color: rgba($danger, 0.25);
+    border: 1px solid var(--bs-danger);
+    transition: border 0.15s ease-in-out;
+}
+
+#error-msg {
+    float: right;
 }
 
 .attribution {
     padding: 4px;
     position: fixed;
-    bottom: 5%;
-    left: 5%;
+    bottom: 2%;
+    left: 3%;
     background-color: var(--charcoal-gray);
     color: var(--white);
     font-size: 12px;
     text-align: center;
     border-radius: 8px;
     box-shadow: 0 0 12px -2px var(--gray);
+    z-index: 9999;
 }
 
 .attribution p {
@@ -61,4 +121,41 @@ h1 {
 
 .attribution a {
     color: var(--gray)
+}
+
+@media (min-width: 768px) {
+    body {
+        background-color: var(--charcoal-gray);
+    }
+
+    main {
+        height: 100vh;
+        display: flex;
+        align-items: center;
+    }
+
+    .container-md {
+        background-color: var(--white);
+        height: auto;
+        border-radius: 1rem;
+        max-width: 960px;
+    }
+    
+    picture {
+        width: 100%;
+    }
+
+    #newsletter-sign-up {
+        display: flex;
+        flex-direction: row-reverse;
+        padding: 1.5rem !important;
+    }
+
+    #success-message {
+        max-width: 438px;
+    }
+}
+
+.hidden {
+    display: none !important;
 }
