--- a/styles.scss
+++ b/styles.scss
@@ -136,13 +136,10 @@ h1 {
 
     .container-md {
         background-color: var(--white);
-        height: auto;
         border-radius: 1rem;
         max-width: 960px;
-    }
-    
-    picture {
-        width: 100%;
+        height: 80vh;
+        position: relative;
     }
 
     #newsletter-sign-up {
