--- a/styles.scss
+++ b/styles.scss
@@ -1,6 +1,6 @@
-@import "node_modules/bootstrap/scss/functions";
-@import "node_modules/bootstrap/scss/variables";
-@import "node_modules/bootstrap/scss/mixins";
+@import "bootstrap/functions";
+@import "bootstrap/variables";
+@import "bootstrap/mixins";
 
 :root {
     --tomato: hsl(4, 100%, 67%);
